// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component List empty 1`] = `
<div
  className="component-list sc-bdVaJa bPGLpq"
/>
`;

exports[`Storyshots Component List multiple items 1`] = `
<div
  className="component-list sc-bdVaJa bPGLpq"
>
  <a
    className="sc-bxivhb jqxlnH"
    href="/foo/bar"
    onClick={[Function]}
  >
    <div
      className="sc-bwzfXH hIsscp"
      selected={false}
    >
      bar
       
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List multiple items with selection 1`] = `
<div
  className="component-list sc-bdVaJa bPGLpq"
>
  <a
    className="sc-bxivhb jqxlnH"
    href="/foo/bar"
    onClick={[Function]}
  >
    <div
      className="sc-bwzfXH heyDVA"
      selected={true}
    >
      bar
       
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List single item 1`] = `
<div
  className="component-list sc-bdVaJa bPGLpq"
>
  <a
    className="sc-bxivhb jqxlnH"
    href="/foo/bar"
    onClick={[Function]}
  >
    <div
      className="sc-bwzfXH hIsscp"
      selected={false}
    >
      bar
       
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List single item with selection 1`] = `
<div
  className="component-list sc-bdVaJa bPGLpq"
>
  <a
    className="sc-bxivhb jqxlnH"
    href="/foo/bar"
    onClick={[Function]}
  >
    <div
      className="sc-bwzfXH heyDVA"
      selected={true}
    >
      bar
       
    </div>
  </a>
</div>
`;

exports[`Storyshots Sidebar closed 1`] = `
<div
  className="sidebar sc-EHOje jRoutO"
>
  <div
    className="sc-iwsKbI cFpGCb"
  >
    <span
      className="sidebar-toggle sc-gZMcBi foRkSn"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-list fa-w-16 fa-lg "
        data-icon="list"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Sidebar open and empty 1`] = `
<div
  className="sidebar sc-EHOje fyashP"
>
  <div
    className="sc-iwsKbI cFpGCb"
  >
    <a
      className="sc-gzVnrw frFvIN"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-htoDjs hFbBHI"
      >
        <img
          alt=""
          className="logo sc-ifAKCX gsfjvQ"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-dnqmqq fNbSbj"
  />
  <div
    className="component-list sc-bdVaJa bPGLpq"
  />
</div>
`;

exports[`Storyshots Sidebar open with components 1`] = `
<div
  className="sidebar sc-EHOje fyashP"
>
  <div
    className="sc-iwsKbI cFpGCb"
  >
    <a
      className="sc-gzVnrw frFvIN"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-htoDjs hFbBHI"
      >
        <img
          alt=""
          className="logo sc-ifAKCX gsfjvQ"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-dnqmqq fNbSbj"
  />
  <div
    className="component-list sc-bdVaJa bPGLpq"
  >
    <a
      className="sc-bxivhb jqxlnH"
      href="/foo/bar"
      onClick={[Function]}
    >
      <div
        className="sc-bwzfXH hIsscp"
        selected={false}
      >
        bar
         
      </div>
    </a>
  </div>
</div>
`;
